# documentdb_dart

./: .gitignore  .gitmodules  README.md  generate_flutter_clean.sh  generate_remove.sh  pubspec.yaml
.github/workflows/: schedule.yaml
lib/: documentdb.dart
native_lib/: .gitignore  CMakeLists.txt  documentdb.cpp  readme.md
package/documentdb/: pubspec.yaml  pubspec_overrides.yaml
package/documentdb/example/: .gitignore  .metadata  LICENSE  pubspec.yaml
package/documentdb_android/: pubspec.yaml
package/documentdb_android/lib/: documentdb_android.dart
package/documentdb_android/test/: documentdb_android_test.dart
package/documentdb_apis/: pubspec.yaml
package/documentdb_apis/example/: documentdb_apis_example.dart
package/documentdb_apis/lib/: documentdb_apis.dart
package/documentdb_apis/test/: documentdb_apis_test.dart
package/documentdb_assets_flutter/: .gitignore  .metadata  pubspec.yaml
package/documentdb_assets_flutter/lib/: documentdb_assets_flutter.dart
package/documentdb_assets_flutter/test/: documentdb_assets_flutter_test.dart
package/documentdb_cli/: pubspec.yaml
package/documentdb_cli/example/: documentdb_cli_example.dart
package/documentdb_cli/lib/: documentdb_cli.dart
package/documentdb_client/: pubspec.yaml
package/documentdb_dart/: activate.sh  pubspec.yaml
package/documentdb_database/: .gitignore  pubspec.yaml
package/documentdb_database_universe_scheme/: pubspec.yaml
package/documentdb_flutter/: pubspec.yaml
package/documentdb_fucshia/: CHANGELOG.md  pubspec.yaml
package/documentdb_ios/: pubspec.yaml
package/documentdb_linux/: pubspec.yaml
package/documentdb_macos/: pubspec.yaml
package/documentdb_scheme/: README.md  pubspec.yaml
package/documentdb_server/: pubspec.yaml
package/documentdb_web/: .metadata  pubspec.yaml
package/documentdb_windows/: pubspec.yaml
test/: documentdb_test.dart
(+71 files in other folders)
